--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                      </div>
 
                      <div class="col-md-4 status">
-                        <h5>$1,278</h5>
+                        <h5 id="total-price">$1,278</h5>
                         <h5>$0</h5>
                         <h5>$1,278</h5>
                      </div>
@@ -98,6 +98,19 @@
             productTotal = productNewCount * 59; 
          }
          document.getElementById(product + '-total').innerText = '$' + productTotal;
+         calculateTotal();
+      }
+
+
+      function calculateTotal(){
+         const phoneInput = document.getElementById('phone-count');
+         const phoneCount = parseInt(phoneInput.value);
+
+         const caseInput = document.getElementById('case-count');
+         const caseCount = parseInt(caseInput.value);
+
+         const totalPrice = phoneCount * 1219 + caseCount * 59;
+         document.getElementById('total-price').innerText = '$' + totalPrice;
       }
 
       //  function handlePhoneChange(isIncrease){
