--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                      </div>
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
-                           <button onclick="  handleProductChange('case', false)" class="btn btn-default"><i class="fas fa-minus"></i></button>
+                           <button onclick="handleProductChange('case', false)" class="btn btn-default"><i class="fas fa-minus"></i></button>
                            <input id="case-count" type="text" class="form-control text-center" value="1">
                            <button onclick="handleProductChange('case', true)" class="btn btn-default"><i class="fas fa-plus"></i></button>
 
@@ -59,19 +59,19 @@
 
                      <div class="col-md-8">
                         <h5>Subtotal: </h5>
-                        <h5>Tax:</h5>
-                        <h5>Total:</h5>
+                        <h5>Tax: </h5>
+                        <h5>Total: </h5>
                      </div>
 
                      <div class="col-md-4 status">
                         <h5 id="total-price">$1,278</h5>
-                        <h5>$0</h5>
-                        <h5>$1,278</h5>
+                        <h5 id="tax-amount">$0</h5>
+                        <h5 id="grand-total">$1,278</h5>
                      </div>
                   </div>
                </div>
                <div class="col-md-12 pt-4 pb-4">
-                  <button type="button" class="btn btn-success check-out">Check Out</button>
+                  <button type="button" class="btn btn-success check-out"> Check Out</button>
                </div>
             </div>
          </div>
@@ -79,8 +79,8 @@
    </section>
    <script>
         function handleProductChange(product, isIncrease){
-           const productInput = document.getElementById(product + '-count');
-         const productCount = parseInt(productInput.value);
+
+         const productCount = getInputValue (product);
          let productNewCount = productCount;
          if(isIncrease == true){
             productNewCount = productCount + 1;
@@ -88,30 +88,37 @@
          if(isIncrease == false && productCount > 0){
             productNewCount = productCount -1;
          }
-         productInput.value = productNewCount;
-         // const caseTotal = caseNewCount * 59 ;
+         document.getElementById(product + '-count').value = productNewCount;
          let productTotal = 0;
          if(product == 'phone'){
-          productTotal = productNewCount * 1219;
+           productTotal = productNewCount * 1219;
          } 
          if(product == 'case'){
-            productTotal = productNewCount * 59; 
+            productTotal = productNewCount * 59;
          }
          document.getElementById(product + '-total').innerText = '$' + productTotal;
          calculateTotal();
       }
 
-
       function calculateTotal(){
-         const phoneInput = document.getElementById('phone-count');
-         const phoneCount = parseInt(phoneInput.value);
-
-         const caseInput = document.getElementById('case-count');
-         const caseCount = parseInt(caseInput.value);
+         const phoneCount = getInputValue('phone');
+         const caseCount = getInputValue('case');
 
          const totalPrice = phoneCount * 1219 + caseCount * 59;
          document.getElementById('total-price').innerText = '$' + totalPrice;
+
+         const tax =Math.round(totalPrice * 0.1);
+         document.getElementById('tax-amount').innerText = '$' + tax;
+
+         const grandTotal = totalPrice + tax;
+         document.getElementById('grand-total').innerText = '$' + grandTotal;
       }
+      function getInputValue(product){
+         const productInput = document.getElementById(product + '-count');
+         const productCount = parseInt(productInput.value);
+         return productCount; 
+      }
+
 
       //  function handlePhoneChange(isIncrease){
       //      const phoneInput = document.getElementById('phone-count');
